[update] 1. 修复项目模板中的密码替换问题、名称自动生成的问题，新建的项目，立即就能 make 编译通过； 2. 支持项目下载、删除项目（删除前备份）；后端 data 目录挂在到本地卷； 3.
